objects/IdMatrix_Shared_Fraud_Address__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipName>Shared_Fraud_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Fraud_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Fraud Record</label>
        <referenceTo>IdMatrix_Shared_Fraud_Record__c</referenceTo>
        <relationshipName>Shared_Fraud_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Shared Fraud Address</label>
    <nameField>
        <label>Shared Fraud Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Shared Fraud Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>